--- a/Example/EasyReact/Base.lproj/Main.storyboard
+++ b/Example/EasyReact/Base.lproj/Main.storyboard
@@ -63,6 +63,26 @@
                                             <segue destination="FQP-IP-5NJ" kind="show" id="vJU-G9-gC3"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="TW0-wK-gVj" style="IBUITableViewCellStyleDefault" id="ztB-8c-BCO">
+                                        <rect key="frame" x="0.0" y="199.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ztB-8c-BCO" id="nWj-3h-qfd">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="MapReplace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TW0-wK-gVj">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Upg-D2-UvU" kind="show" id="Kb2-UW-L0d"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -92,6 +112,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kWR-tv-9sy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1742" y="249"/>
+        </scene>
+        <!--MapReplace-->
+        <scene sceneID="QZG-rE-CzX">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MapReplace" id="Upg-D2-UvU" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qMJ-Zj-YsS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1792" y="378"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mLg-8J-4ul">
